# FYP

./: README.md  Untitled Diagram.xml
catkin_ws/src/bluefox2-master/launch/: single_node.launch
catkin_ws/src/controller/n1ctrl/launch/: ctrl.launch
catkin_ws/src/controller/n1ctrl/src/: N1CtrlFSM_control.cpp  controller.cpp  hovthrkf.cpp
catkin_ws/src/djiros-3.1/launch/: djiros.launch
catkin_ws/src/imu_m100_interface/: CMakeLists.txt  package.xml
catkin_ws/src/imu_m100_interface/scripts/: imu_m100_interface.py
catkin_ws/src/imu_m100_interface/src/: M100_interface.cpp
catkin_ws/src/mocap_optitrack/config/: mocap.yaml
catkin_ws/src/pos_vel_mocap/: CMakeLists.txt
catkin_ws/src/trajectory_generator/: CMakeLists.txt  CMakeLists.txt~  mainpage.dox
catkin_ws/src/trajectory_generator/cfg/: trajectory_generator_ui.cfgc
catkin_ws/src/trajectory_generator/docs/: TrajectoryGeneratorUIConfig.dox
catkin_ws/src/trajectory_generator/src/: trajectory_generator_node.cpp
catkin_ws/src/vins-Mono/config/M100/: ex_calib_result.yaml  m100_config.yaml  vins_result.csv
catkin_ws/src/vins-Mono/config/euroc/: ex_calib_result.yaml
catkin_ws/src/vins-Mono/vins_estimator/launch/: m100.launch
openpose/: Makefile  Makefile.config  Makefile.config.Ubuntu16.example  errorLogging.txt
openpose/.build_release/lib/: libopenpose.so.1.0.0-rc2
openpose/pose_result/: choudong_000000000002_pose.yml  choudong_000000000012_pose.yml  choudong_000000000023_pose.yml  choudong_000000000207_pose.yml  choudong_000000000231_pose.yml  choudong_000000000247_pose.yml  choudong_000000000262_pose.yml  choudong_000000000270_pose.yml  choudong_000000000302_pose.yml  choudong_000000000312_pose.yml
openpose_ros/: CMakeLists.txt
openpose_ros/launch/: depth.launch  pose_detection.launch  stereo2.launch
openpose_ros/src/: openpose_ros_node.cpp
src/bluefox2/launch/: single_node.launch  stereo_node.launch  stereo_rect.launch
src/controller/n1ctrl/launch/: ctrl.launch  djisim.launch
src/controller/n1ctrl/script/: n1_sim_helper.py
src/disp_to_pointcloud/: CMakeLists.txt  package.xml
src/disp_to_pointcloud/src/: disp_to_pointcloud.cpp
src/drone_cinematography/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/map_skeleton/: CMakeLists.txt  package.xml
src/mocap_optitrack-master/launch/: mocap.launch
src/mocap_optitrack-master/src/: mocap_datapackets.cpp
src/openpose_ros/: CMakeLists.txt
src/pos_vel_mocap/: _DS_Store
src/pose_3d/: CMakeLists.txt  package.xml
src/pose_3d/include/pose_3d/: dataType.hpp  libsgm.h
src/pose_3d/src/: stereo_sgm.cpp
src/rect_odom/: CMakeLists.txt  package.xml
src/sgbm_ros/: CMakeLists.txt
src/sgbm_ros/launch/: depth.launch
src/trajectory_generator/docs/: TrajectoryGeneratorUIConfig-usage.dox  TrajectoryGeneratorUIConfig.wikidoc
src/trajectory_generator/src/: polynomial_trajectory_generator.h  trajectory_generator_node.cpp  trajectory_generator_node2.cpp  trajectory_generator_node_sim.cpp
