<?xml version="1.0"?>
<package>
  <name>pose_3d</name>
  <version>1.0.0</version>
  <description>The pose 3d package</description>

  <maintainer email="fgaoaa@gmail.com">Fei Gao</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>image_transport</run_depend>

  <export>

  </export>
</package>
